[gd_scene load_steps=2 format=3 uid="uid://cqsufelvjofvk"]

[ext_resource type="Script" path="res://src/main/common/util/hitbox.gd" id="1_ptuw3"]

[node name="Hitbox" type="Area2D"]
script = ExtResource("1_ptuw3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DisableTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="DisableTimer" to="." method="_on_disable_timer_timeout"]
